--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,7 @@
 /* Desktop */
 @media screen and (min-width:991px) {
     .content{
+        position: relative;
         transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
     }
 
