--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,35 @@
+/* GRID */
+.row{
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.row:before {
+    display: table;
+    content: " ";
+}
+
+.row:after {
+    clear: both;
+}
+
+.col{
+    float: left;
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.col.s12{
+    width: 100%;
+}
+
+.content{
+    box-sizing: border-box;
+    padding: 15px;
+}
+
 /* Desktop */
 @media screen and (min-width:991px) {
     .content{
